--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"/>
+    <link rel="shortcut icon" href="img/favicon.png">
     <title>SD - Web Developer</title>
 
     <!-- Global stylesheets -->
@@ -35,6 +36,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
           <br>
+          <img src="img/logo-s.png" style="height:50px;width:50px;" class="img-fluid mb-3" alt="">
          
 
         </span>
